Changelog 4.2.0 (2020-01-17)
----------------------------
* Jakarta EE API: switch from javax.xml.bind:jaxb-api to jakarta.xml.bind:jakarta.xml.bind-api (issue 1228) (thanks to Sanne Grinovero for pull request)
* Ignore unsupported by scripbejava verbs (thanks to Corneliu Duplachi for pull request)
* Add support for SameSite in Cookie (issue 1255) (thanks to Andreas Jonsson for pull request)
* Upgrading jackson2 from version 2.10.0 to 2.10.2
* Introduced the spring-mock-mvc-kotlin-extensions project which allows a nicer experience for Kotlin developers using the spring-mock-mvc module. This allows one to write tests like this:

    class RestAssuredMockMvcKotlinExtensionsTest {

        @Test
        fun example() {
            val mockMvc =
                MockMvcBuilders.standaloneSetup(GreetingController())
                    .build()

            val id: Int =
            Given {
                mockMvc(mockMvc)
                param("name", "Johan")
            } When {
                get("/greeting")
            } Then {
                body(
                    "id", Matchers.equalTo(1),
                    "content", Matchers.equalTo("Hello, Johan!")
                )
            } Extract {
                path("id")
            }

            assertThat(id).isEqualTo(1)
    }

  (thanks to Myeonghyeon-Lee for pull request)
* Added a new object mapper type that supports the Jakarta EE JSON Binding (JSON-B) specification. By default it will use Eclipse Yasson as the JSON-B implementation. To use it simply include

    <dependency>
        <groupId>org.eclipse</groupId>
        <artifactId>yasson</artifactId>
         <version>${yasson.version}</version>
    </dependency>

  in your classpath and then configure REST Assured to use it as its default ObjectMapperType:

    RestAssured.config = RestAssured.config.objectMapperConfig(ObjectMapperConfig.objectMapperConfig().defaultObjectMapperType(ObjectMapperType.JSONB));
