@@ -33,7 +33,7 @@ import org.apache.http.entity.ByteArrayEntity;
 import org.apache.http.entity.InputStreamEntity;
 import org.apache.http.entity.StringEntity;
 import org.apache.http.message.BasicNameValuePair;
-import org.codehaus.groovy.runtime.DefaultGroovyMethods;
+import org.codehaus.groovy.runtime.IOGroovyMethods;
 import org.codehaus.groovy.runtime.MethodClosure;
 
 import java.io.*;
@@ -172,7 +172,7 @@ public class EncoderRegistry {
         }
         if (data instanceof BufferedReader) {
             StringWriter out = new StringWriter();
-            DefaultGroovyMethods.leftShift(out, (BufferedReader) data);
+            IOGroovyMethods.leftShift(out, (BufferedReader) data);
 
             data = out;
         }
