@@ -39,6 +39,7 @@ import org.apache.http.conn.params.ConnRoutePNames;
 import org.apache.http.impl.client.AbstractHttpClient;
 import org.apache.http.protocol.HttpContext;
 import org.codehaus.groovy.runtime.DefaultGroovyMethods;
+import org.codehaus.groovy.runtime.IOGroovyMethods;
 import org.codehaus.groovy.runtime.MethodClosure;
 
 import java.io.*;
@@ -161,7 +162,7 @@ public abstract class HTTPBuilder {
     protected final Map<Object, Closure> defaultResponseHandlers = new StringHashMap<Closure>(buildDefaultResponseHandlers());
     protected ContentEncodingRegistry contentEncodingHandler;
 
-    protected final Map<Object, Object> defaultRequestHeaders = new StringHashMap<Object>();
+    protected final Map<Object, Object> defaultRequestHeaders = new StringHashMap<>();
 
     protected EncoderRegistry encoders;
     protected HttpResponseContentTypeFinder parsers = new HttpResponseContentTypeFinder();
@@ -595,11 +596,11 @@ public abstract class HTTPBuilder {
             //If response is streaming, buffer it in a byte array:
             if (parsedData instanceof InputStream) {
                 ByteArrayOutputStream buffer = new ByteArrayOutputStream();
-                DefaultGroovyMethods.leftShift(buffer, (InputStream) parsedData);
+                IOGroovyMethods.leftShift(buffer, (InputStream) parsedData);
                 parsedData = new ByteArrayInputStream(buffer.toByteArray());
             } else if (parsedData instanceof Reader) {
                 StringWriter buffer = new StringWriter();
-                DefaultGroovyMethods.leftShift(buffer, (Reader) parsedData);
+                IOGroovyMethods.leftShift(buffer, (Reader) parsedData);
                 parsedData = new StringReader(buffer.toString());
             } else if (parsedData instanceof Closeable)
                 log.debug("Parsed data is streaming, but will be accessible after " +
