@@ -1,3 +1,7 @@
+Changelog next version
+----------------------
+* Upgraded from Groovy 2.5.7 to Groovy 3.0.0
+
 Changelog 4.2.0 (2020-01-17)
 ----------------------------
 * Jakarta EE API: switch from javax.xml.bind:jaxb-api to jakarta.xml.bind:jakarta.xml.bind-api (issue 1228) (thanks to Sanne Grinovero for pull request)
